--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:push": "prisma db push",
+    "prisma:preview": "prisma db pull",
+    "prisma:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -25,10 +36,12 @@
     "lucide": "^0.535.0",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
+    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
+    "ts-node": "^10.9.2",
     "vaul": "^1.1.2",
     "zustand": "^5.0.7"
   },
