--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "vaul": "^1.1.2",
     "zustand": "^5.0.7"
   },
