--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,12 +10,23 @@
 !.yarn/releases
 !.yarn/versions
 
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json # если ты не хочешь фиксировать зависимости, но чаще лучше хранить
+
+
+
+
 # testing
 /coverage
 
 # next.js
 /.next/
 /out/
+/dist/
+
 
 # production
 /build
@@ -39,3 +50,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Build artifacts
+*.log
+*.tmp
+tmp.tsx
+
+# IDE / редактор
+.vscode/
+.idea/
+*.swp
+
