--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -37,16 +38,18 @@
     "clsx": "^2.1.1",
     "lucide": "^0.535.0",
     "lucide-react": "^0.535.0",
-    "next": "15.4.5",
+    "next": "^15.5.2",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "vaul": "^1.1.2",
+    "zod": "^4.1.5",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
