--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "^15.5.2",
     "qs": "^6.14.0",
     "react": "19.1.0",
+    "react-dadata": "^2.28.0-beta.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
