--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/render": "1.2.3",
     "@types/qs": "^6.14.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -46,6 +47,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-use": "^17.6.0",
+    "resend": "^6.0.3",
     "tailwind-merge": "^3.3.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
