--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "lucide": "^0.535.0",
     "lucide-react": "^0.535.0",
     "next": "^15.5.2",
+    "next-auth": "^4.24.11",
+    "nextjs-toploader": "^3.9.17",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dadata": "^2.28.0-beta.0",
