--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-email/render": "1.2.3",
     "@types/qs": "^6.14.0",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide": "^0.535.0",
@@ -42,6 +43,7 @@
     "next": "^15.5.2",
     "next-auth": "^4.24.11",
     "nextjs-toploader": "^3.9.17",
+    "pg": "^8.16.3",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dadata": "^2.28.0-beta.0",
@@ -60,6 +62,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
