--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "react-insta-stories": "^2.8.0",
     "react-use": "^17.6.0",
     "resend": "^6.0.3",
     "tailwind-merge": "^3.3.1",
